--- a/.github/workflows/update-rss.yml
+++ b/.github/workflows/update-rss.yml
@@ -1,9 +1,9 @@
-name: Update RSS Feed and HTML
+name: Update Bonikbarta RSS Feed
 
 on:
-  schedule:
-    - cron: '0 * * * *' # every hour
   workflow_dispatch:
+  schedule:
+    - cron: '0 * * * *' # every hour, adjust as needed
 
 jobs:
   update-feed:
@@ -22,33 +22,29 @@ jobs:
         with:
           node-version: '18'
 
-      # 3. Install dependencies (Playwright + node-fetch if needed)
+      # 3. Install dependencies
       - name: Install dependencies
         run: |
-          npm ci || npm install
+          npm install playwright node-fetch
           npx playwright install --with-deps
 
-      # 4. Generate RSS Feed (Playwright version)
+      # 4. Generate RSS Feed
       - name: Generate RSS Feed
         run: node generate-rss-playwright.js || exit 1
 
-      # 5. Generate PolitePol HTML
-      - name: Generate PolitePol HTML
-        run: node generate-plain-index.js || exit 1
-
-      # 6. Configure Git
+      # 5. Configure Git
       - name: Configure Git
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
 
-      # 7. Add, commit, and push changes safely
-      - name: Commit and push changes
+      # 6. Add, commit, and push changes safely
+      - name: Commit and push feed.xml
         run: |
-          git add feed.xml index-plain.html
+          git add feed.xml
           bash -c 'if git diff --staged --quiet; then
             echo "✅ No changes to commit"
           else
-            git commit -m "🔄 Update RSS feed and HTML - $(date +%Y-%m-%d\ %H:%M:%S)"
+            git commit -m "🔄 Update Bonikbarta RSS feed - $(date +%Y-%m-%d\ %H:%M:%S)"
             git push
           fi'
